# raytrace

./: .gitignore
src/: CMakeLists.txt  CmakeLists.txt  body.cpp  body.hpp  material.cpp  material.hpp  progress.cpp  progress.hpp  scene.cpp  scene.hpp  test.cpp
src/imagery/: color.cpp  color.hpp  image.cpp  image.hpp  png.cpp  png.hpp  ppm.cpp  ppm.hpp
src/linalg/: CMakeLists.txt  math.cpp  matrix.hpp  random.cpp  random.hpp  ray.cpp  ray.hpp  vector.cpp  vector.hpp
src/linalg/include/linalg/: math.hpp  random.hpp  ray.hpp  vector.hpp
src/linalg/src/: math.cpp  random.cpp  ray.cpp  vector.cpp
